:sparkles: Add new py files and Naive Bayes test algorithms

--- a/TestNaiveBayes/MachineLearningAlgorithms.ipynb
+++ b/TestNaiveBayes/MachineLearningAlgorithms.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -29,8 +29,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def loadCsv(filename):\n",
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -125,7 +127,7 @@
    "source": [
     "def main():\n",
     "    filename = \"pima-indians-diabetes.data.csv\"\n",
-    "    splitRatio = 0.67\n",
+    "    splitRatio = 0.5\n",
     "    dataset = loadCsv(filename)\n",
     "    trainingSet, testSet = splitDataset(dataset, splitRatio)\n",
     "    print(('Split {0} rows into train={1} and test={2} rows').format(len(dataset), len(trainingSet), len(testSet)))\n",
@@ -137,20 +139,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Split 768 rows into train=514 and test=254 rows\n",
-      "Accuracy: 56.69291338582677%\n"
+      "Split 768 rows into train=384 and test=384 rows\n",
+      "Accuracy: 57.8125%\n"
      ]
     }
    ],
    "source": [
-    "main()"
+    "for i in range (1):\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blanco' 'blanco' 'mediterraneo']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import GaussianNB\n",
+    " \n",
+    "# create naive bayes classifier\n",
+    "gaunb = GaussianNB()\n",
+    " \n",
+    "# create dataset\n",
+    "X = [[121, 80, 44], [180, 70, 43], [166, 60, 38], [153, 54, 37], [166, 65, 40], [190, 90, 47], [175, 64, 39],\n",
+    "     [174, 71, 40], [159, 52, 37], [171, 76, 42], [183, 85, 43]]\n",
+    " \n",
+    "Y = ['blanco', 'blanco', 'mediterraneo', 'mediterraneo', 'blanco', 'blanco', 'mediterraneo', 'mediterraneo', 'mediterraneo', 'blanco', 'blanco']\n",
+    " \n",
+    "# train classifier with dataset\n",
+    "gaunb = gaunb.fit(X, Y)\n",
+    " \n",
+    "# predict using classifier\n",
+    "prediction = gaunb.predict([[190, 70, 43], [160, 70, 20],[180, 50, 38]])\n",
+    "print(prediction)"
    ]
   },
   {
