:zap: Testing RBM fake data

--- a/RBM_NameGeneration/NameGeneration_RBM.ipynb
+++ b/RBM_NameGeneration/NameGeneration_RBM.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -536,6 +536,314 @@
     "oneHotEncodeSparse = OneHotEncoder(maxLength).fit(g1)\n",
     "oneHotVectorSparse = oneHotEncodeSparse.transform(g1)\n",
     "print(oneHotVectorSparse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TEST WITH RBM IMPLEMENTATION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import inspect\n",
+    "#sys.path.insert(0,'..')\n",
+    "\n",
+    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
+    "parent =  currentdir + '\\RBM'\n",
+    "sys.path.insert(0,parent)\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from timeit import default_timer as timer\n",
+    "import numpy as np\n",
+    "import time\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numexpr  as ne\n",
+    "import profile\n",
+    "import rbm as Rbm\n",
+    "import pandas\n",
+    "from random import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate fake data to test RBM\n",
+    "def generate_data_fake(): \n",
+    "        vec = [] \n",
+    "        for i in range(56859): \n",
+    "            tmp = [] \n",
+    "            for k in range(29): \n",
+    "                tmp.append(randint(0, 9)) \n",
+    "            vec.append(tmp) \n",
+    "        return np.asarray(vec) \n",
+    "    \n",
+    "def generate_one_hot_vector(vec, maxLength): \n",
+    "        oneHotEncoder = OneHotEncoder(maxLength, sparse=False).fit(vec) \n",
+    "        oneHotVector = oneHotEncoder.transform(vec) \n",
+    "        return oneHotVector\n",
+    "    \n",
+    "test_Data = generate_data_fake()\n",
+    "test_Data_Vector = generate_one_hot_vector(test_Data, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "visible_dim = test_Data_Vector.shape[1]\n",
+    "hidden_dim = 225\n",
+    "epochs = 100\n",
+    "K = 1\n",
+    "lr = 0.1\n",
+    "batch_size = 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Define RBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((290, 225), (290,), <rbm.RBM at 0x23d728cc828>)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rbm_ = Rbm.RBM(visible_dim=visible_dim,\n",
+    "               hidden_dim=hidden_dim,\n",
+    "               seed=42,\n",
+    "               mu=0, \n",
+    "               sigma=0.3,\n",
+    "               monitor_time=True)\n",
+    "rbm_.W.shape, rbm_.b.shape, rbm_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fitting RBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_Data_Vector_Aux = np.array(test_Data_Vector, dtype=\"float64\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tepoch: 0 \ttime per epoch: 45.48\ttotal time: 45.48\r",
+      "\tLast epoch: 0 \ttime per epoch: 45.48\ttotal time: 45.48\r\n",
+      "\tTraining finished\n",
+      "\n",
+      "\n",
+      "Wall time: 45.5 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "rbm_.fit(test_Data_Vector_Aux, \n",
+    "         method='CDK',\n",
+    "         K=K,\n",
+    "         lr=lr,\n",
+    "         epochs=1,\n",
+    "         batch_size=128,\n",
+    "         plot_weights=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tepoch: 0 \ttime per epoch: 1.55\ttotal time: 1.56\r",
+      "\tLast epoch: 0 \ttime per epoch: 1.55\ttotal time: 1.56\r\n",
+      "\tTraining finished\n",
+      "\n",
+      "\n",
+      "Wall time: 1.56 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "rbm_.fit(test_Data_Vector_Aux, \n",
+    "         method='vectorized_CDK',\n",
+    "         K=K,\n",
+    "         lr=0.01,\n",
+    "         epochs=1,\n",
+    "         batch_size=128,\n",
+    "         plot_weights=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training multiple epochs and showing the weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rbm_ = Rbm.RBM(visible_dim=visible_dim,\n",
+    "               hidden_dim=hidden_dim,\n",
+    "               seed=42,\n",
+    "               mu=0, \n",
+    "               sigma=0.3,\n",
+    "               monitor_time=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\tLast epoch: 299 \ttime per epoch: 1.87\ttotal time: 621.77\n",
+      "\tTraining finished\n",
+      "\n",
+      "\n",
+      "Wall time: 10min 21s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "rbm_.fit(test_Data_Vector_Aux, \n",
+    "         method='vectorized_CDK',\n",
+    "         K=K,\n",
+    "         lr=0.01,\n",
+    "         epochs=300,\n",
+    "         batch_size=128,\n",
+    "         plot_weights=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Sampling from an RBM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(225,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(123)\n",
+    "h_hat = np.array([np.random.randint(2) for i in range(rbm_.hidden_dim)])\n",
+    "print(h_hat.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "x_hat, x_hat_p = rbm_.sample_visible_from_hidden(h_hat, n_gibbs=2000)\n",
+    "final_result = []\n",
+    "for i in range(x_hat.shape[0]):\n",
+    "    if x_hat[i] == True:\n",
+    "        final_result.append(1)\n",
+    "    else:\n",
+    "        final_result.append(0)\n",
+    "result = []\n",
+    "result.append(final_result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_Test = transformFromOneHotVector(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 4, 8, 0, 2, 4, 8, 3, 1, 2, 4, 3, 6, 6, 7, 3, 5, 7, 3, 0, 4, 6, 7, 9, 0, 2, 3, 6, 3, 5, 2, 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result_Test)"
    ]
   }
  ],
