--- a/RBM_NameGeneration/NameGeneration_RBM.ipynb
+++ b/RBM_NameGeneration/NameGeneration_RBM.ipynb
@@ -547,8 +547,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
@@ -576,8 +578,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Generate fake data to test RBM\n",
@@ -601,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -624,16 +628,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((290, 225), (290,), <rbm.RBM at 0x23d728cc828>)"
+       "((290, 225), (290,), <rbm.RBM at 0x1572483b278>)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 49,
    "metadata": {
     "collapsed": true
    },
@@ -668,19 +672,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tepoch: 0 \ttime per epoch: 45.48\ttotal time: 45.48\r",
-      "\tLast epoch: 0 \ttime per epoch: 45.48\ttotal time: 45.48\r\n",
+      "\tepoch: 0 \ttime per epoch: 35.71\ttotal time: 35.72\r",
+      "\tLast epoch: 0 \ttime per epoch: 35.71\ttotal time: 35.72\r\n",
       "\tTraining finished\n",
       "\n",
       "\n",
-      "Wall time: 45.5 s\n"
+      "Wall time: 35.7 s\n"
      ]
     }
    ],
@@ -697,19 +701,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tepoch: 0 \ttime per epoch: 1.55\ttotal time: 1.56\r",
-      "\tLast epoch: 0 \ttime per epoch: 1.55\ttotal time: 1.56\r\n",
+      "\tepoch: 0 \ttime per epoch: 1.63\ttotal time: 1.64\r",
+      "\tLast epoch: 0 \ttime per epoch: 1.63\ttotal time: 1.64\r\n",
       "\tTraining finished\n",
       "\n",
       "\n",
-      "Wall time: 1.56 s\n"
+      "Wall time: 1.64 s\n"
      ]
     }
    ],
@@ -733,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -749,18 +753,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\tLast epoch: 299 \ttime per epoch: 1.87\ttotal time: 621.77\n",
+      "\tLast epoch: 999 \ttime per epoch: 1.38\ttotal time: 1445.71\n",
       "\tTraining finished\n",
       "\n",
       "\n",
-      "Wall time: 10min 21s\n"
+      "Wall time: 24min 5s\n"
      ]
     }
    ],
@@ -770,7 +774,7 @@
     "         method='vectorized_CDK',\n",
     "         K=K,\n",
     "         lr=0.01,\n",
-    "         epochs=300,\n",
+    "         epochs=1000,\n",
     "         batch_size=128,\n",
     "         plot_weights=False)"
    ]
@@ -784,27 +788,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(225,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.random.seed(123)\n",
-    "h_hat = np.array([np.random.randint(2) for i in range(rbm_.hidden_dim)])\n",
-    "print(h_hat.shape)"
+    "h_hat = np.array([np.random.randint(2) for i in range(rbm_.hidden_dim)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 55,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -822,8 +818,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "result_Test = transformFromOneHotVector(result)"
@@ -831,20 +829,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2, 4, 8, 0, 2, 4, 8, 3, 1, 2, 4, 3, 6, 6, 7, 3, 5, 7, 3, 0, 4, 6, 7, 9, 0, 2, 3, 6, 3, 5, 2, 0]]\n"
+      "[[7, 4, 9, 4, 6, 1, 2, 6, 8, 2, 4, 2, 7, 4, 1, 1, 3, 7, 9, 4, 6, 3, 6, 4, 4, 5, 2, 5]]\n"
      ]
     }
    ],
    "source": [
     "print(result_Test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
